--- a/styles.css
+++ b/styles.css
@@ -284,7 +284,7 @@ nav ul li a:hover::after {
     margin-bottom: 20px;
 }
 
-.link {
+.layer a {
     margin-top: 20px;
     color: #ff004f;
     text-decoration: none;
